//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  emailVerified Boolean [not null]
  image String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  isOnboarded Boolean [not null, default: false]
  hasSeenWelcomeSplash Boolean [not null, default: false]
  nim String
  role RoleName
  onboardingData Json
  onboardingStep String
  gender Gender
  personalityProfile personality_profiles
  personalitySessions personality_sessions [not null]
  accounts account [not null]
  personPreferences person_preferences [not null]
  preferredBy person_preferences [not null]
  personSkills person_skills [not null]
  sessions session [not null]
  taskPreferences task_preferences [not null]
  ownedTeamRequests team_formation_requests [not null]
  teamMemberships team_members [not null]
  courses courses [not null]
  courseEnrollments course_enrollments [not null]
  dosenTokenUsages dosen_token_usage [not null]
  createdAssignments assignments [not null]
  assignmentSubmissions assignment_submissions [not null]
  AssignmentTopicPreference assignment_topic_preferences [not null]
  competencyProfiles student_competency_profiles [not null]
}

Table session {
  id String [pk]
  expiresAt DateTime [not null]
  token String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ipAddress String
  userAgent String
  userId String [not null]
  user user [not null]
}

Table account {
  id String [pk]
  accountId String [not null]
  providerId String [not null]
  userId String [not null]
  accessToken String
  refreshToken String
  idToken String
  accessTokenExpiresAt DateTime
  refreshTokenExpiresAt DateTime
  scope String
  password String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user user [not null]
}

Table verification {
  id String [pk]
  identifier String [not null]
  value String [not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table skills {
  id String [pk]
  name String [unique, not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  personSkills person_skills [not null]
  sourceRelations skill_similarities [not null]
  targetRelations skill_similarities [not null]
  taskSkills task_skills [not null]
  studentProfiles student_competency_profiles [not null]
  courseSkills course_skills [not null]
}

Table person_skills {
  id String [pk]
  personId String [not null]
  skillId String [not null]
  level Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  person user [not null]
  skill skills [not null]

  indexes {
    (personId, skillId) [unique]
  }
}

Table person_preferences {
  id String [pk]
  personId String [not null]
  preferredPersonId String [not null]
  preference Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  person user [not null]
  preferredPerson user [not null]

  indexes {
    (personId, preferredPersonId) [unique]
  }
}

Table skill_similarities {
  id String [pk]
  sourceId String [not null]
  targetId String [not null]
  similarity Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  sourceSkill skills [not null]
  targetSkill skills [not null]

  indexes {
    (sourceId, targetId) [unique]
  }
}

Table tasks {
  id String [pk]
  name String [not null]
  description String
  teamSize Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  preferences task_preferences [not null]
  skills task_skills [not null]
  teams teams [not null]
}

Table task_skills {
  id String [pk]
  taskId String [not null]
  skillId String [not null]
  level Float [not null]
  importance Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  skill skills [not null]
  task tasks [not null]

  indexes {
    (taskId, skillId) [unique]
  }
}

Table task_preferences {
  id String [pk]
  taskId String [not null]
  personId String [not null]
  preference Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  person user [not null]
  task tasks [not null]

  indexes {
    (taskId, personId) [unique]
  }
}

Table team_formation_requests {
  id String [pk]
  ownerId String [not null]
  assignmentId String
  status TeamFormationStatus [not null, default: 'PENDING']
  alpha Float
  beta Float
  gamma Float
  delta Float
  initRandom Boolean [not null, default: false]
  requestData Json
  responseData Json
  errorMessage String
  replyPostUrl String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  completedAt DateTime
  owner user [not null]
  assignment assignments
  teams teams [not null]
}

Table rate_limit_buckets {
  key String [not null]
  windowStart DateTime [not null]
  count Int [not null, default: 0]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (key, windowStart) [pk]
  }
}

Table teams {
  id String [pk]
  teamFormationRequestId String [not null]
  taskId String
  name String
  quality Float
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  members team_members [not null]
  task tasks
  teamFormationRequest team_formation_requests [not null]
}

Table team_members {
  id String [pk]
  teamId String [not null]
  userId String [not null]
  assignedSkillIds String[] [not null]
  createdAt DateTime [default: `now()`, not null]
  team teams [not null]
  user user [not null]

  indexes {
    (teamId, userId) [unique]
  }
}

Table courses {
  id String [pk]
  namaMataKuliah String [not null]
  kelas String [not null]
  tahunAwalPeriode Int [not null]
  tahunAkhirPeriode Int [not null]
  periode String [not null]
  dosenId String [not null]
  shareToken String [unique]
  archivedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  dosen user [not null]
  enrollments course_enrollments [not null]
  assignments assignments [not null]
  courseSkills course_skills [not null]
}

Table course_skills {
  id String [pk]
  courseId String [not null]
  skillId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  course courses [not null]
  skill skills [not null]

  indexes {
    (courseId, skillId) [unique]
  }
}

Table course_catalogs {
  id String [pk]
  code String [unique, not null]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table class_catalogs {
  id String [pk]
  code String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table course_enrollments {
  id String [pk]
  courseId String [not null]
  studentId String [not null]
  enrolledAt DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  course courses [not null]
  student user [not null]

  indexes {
    (courseId, studentId) [unique]
  }
}

Table dosen_tokens {
  id String [pk]
  token String [unique, not null]
  description String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  usages dosen_token_usage [not null]
}

Table dosen_token_usage {
  id String [pk]
  tokenId String [not null]
  userId String [not null]
  usedAt DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  token dosen_tokens [not null]
  user user [not null]

  indexes {
    (tokenId, userId) [unique]
  }
}

Table assignments {
  id String [pk]
  courseId String [not null]
  createdById String [not null]
  title String [not null]
  description String
  startAt DateTime [default: `now()`, not null]
  status AssignmentStatus [not null, default: 'BELUM_ISI']
  structureVersion Int [not null, default: 1]
  structureUpdatedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  archivedAt DateTime
  course courses [not null]
  createdBy user [not null]
  submissions assignment_submissions [not null]
  AssignmentTopic assignment_topics [not null]
  snapshots assignment_snapshots [not null]
  teamFormationRequests team_formation_requests [not null]
  competencyProfiles student_competency_profiles [not null]
}

Table assignment_snapshots {
  id String [pk]
  assignmentId String [not null]
  version Int [not null]
  title String [not null]
  description String
  snapshotAt DateTime [default: `now()`, not null]
  snapshotReason String
  assignment assignments [not null]

  indexes {
    (assignmentId, version) [unique]
  }
}

Table assignment_submissions {
  id String [pk]
  assignmentId String [not null]
  studentId String [not null]
  structureVersion Int [not null, default: 1]
  needsUpdate Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  assignment assignments [not null]
  student user [not null]

  indexes {
    (assignmentId, studentId) [unique]
  }
}

Table assignment_topics {
  id String [pk]
  assignmentId String [not null]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  assignment assignments [not null]
  preferences assignment_topic_preferences [not null]

  indexes {
    (assignmentId, name) [unique]
  }
}

Table assignment_topic_preferences {
  id String [pk]
  assignmentTopicId String [not null]
  personId String [not null]
  preference Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  topic assignment_topics [not null]
  person user [not null]

  indexes {
    (assignmentTopicId, personId) [unique]
  }
}

Table student_competency_profiles {
  id String [pk]
  studentId String [not null]
  competencyKind CompetencyKind [not null]
  skillId String
  topicKey String
  value Float [not null]
  sourceAssignmentId String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  student user [not null]
  skill skills
  sourceAssignment assignments

  indexes {
    (studentId, competencyKind, skillId) [unique]
    (studentId, competencyKind, topicKey) [unique]
  }
}

Table personality_questions {
  id String [pk]
  bankVersion Int [not null]
  status PersonalityBankStatus [not null, default: 'ACTIVE']
  text String [not null]
  dimension PersonalityAxis [not null]
  orderHint Int [not null]
  reversed Boolean [not null, default: false]
  isAttentionCheck Boolean [not null, default: false]
  locale String [not null, default: 'id-ID']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  responses personality_responses [not null]

  indexes {
    (bankVersion, orderHint, locale) [unique]
  }
}

Table personality_sessions {
  id String [pk]
  userId String [not null]
  bankVersion Int [not null]
  presentedOrder Json [not null]
  startedAt DateTime [default: `now()`, not null]
  submittedAt DateTime
  durationMs Int
  attentionPassed Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user user [not null]
  responses personality_responses [not null]
  score personality_scores
}

Table personality_profiles {
  userId String [pk]
  ei Float
  sn Float
  tf Float
  pj Float
  mbtiType MBTIType
  personalityData Json
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user user [not null]
}

Table personality_responses {
  id String [pk]
  sessionId String [not null]
  questionId String [not null]
  rawValue Int [not null]
  scoredValue Int
  position Int [not null]
  createdAt DateTime [default: `now()`, not null]
  session personality_sessions [not null]
  question personality_questions [not null]

  indexes {
    (sessionId, questionId) [unique]
  }
}

Table personality_scores {
  sessionId String [pk]
  ei Float [not null]
  sn Float [not null]
  tf Float [not null]
  pj Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  session personality_sessions [not null]
}

Enum Gender {
  FEMALE
  MALE
}

Enum TeamFormationStatus {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
}

Enum RoleName {
  ADMIN
  TEACHER
  STUDENT
}

Enum MBTIType {
  ENFJ
  ENFP
  ENTJ
  ENTP
  ESFJ
  ESFP
  ESTJ
  ESTP
  INFJ
  INFP
  INTJ
  INTP
  ISFJ
  ISFP
  ISTJ
  ISTP
}

Enum AssignmentStatus {
  BELUM_ISI
  MENUNGGU
  BERHASIL_PEMBAGIAN_GRUP
}

Enum PersonalityAxis {
  EI
  SN
  TF
  PJ
  I
  E
  S
  N
  F
  T
  J
  P
  NJ
  NP
  SJ
  SP
  EF
  ET
  IF
  IT
}

Enum PersonalityBankStatus {
  DRAFT
  ACTIVE
  RETIRED
}

Enum CompetencyKind {
  SKILL
  TOPIC
}

Ref: session.userId > user.id [delete: Cascade]

Ref: account.userId > user.id [delete: Cascade]

Ref: person_skills.personId > user.id [delete: Cascade]

Ref: person_skills.skillId > skills.id [delete: Cascade]

Ref: person_preferences.personId > user.id [delete: Cascade]

Ref: person_preferences.preferredPersonId > user.id [delete: Cascade]

Ref: skill_similarities.sourceId > skills.id [delete: Cascade]

Ref: skill_similarities.targetId > skills.id [delete: Cascade]

Ref: task_skills.skillId > skills.id [delete: Cascade]

Ref: task_skills.taskId > tasks.id [delete: Cascade]

Ref: task_preferences.personId > user.id [delete: Cascade]

Ref: task_preferences.taskId > tasks.id [delete: Cascade]

Ref: team_formation_requests.ownerId > user.id [delete: Cascade]

Ref: team_formation_requests.assignmentId > assignments.id [delete: Set Null]

Ref: teams.taskId > tasks.id [delete: Set Null]

Ref: teams.teamFormationRequestId > team_formation_requests.id [delete: Cascade]

Ref: team_members.teamId > teams.id [delete: Cascade]

Ref: team_members.userId > user.id [delete: Cascade]

Ref: courses.dosenId > user.id [delete: Cascade]

Ref: course_skills.courseId > courses.id [delete: Cascade]

Ref: course_skills.skillId > skills.id [delete: Cascade]

Ref: course_enrollments.courseId > courses.id [delete: Cascade]

Ref: course_enrollments.studentId > user.id [delete: Cascade]

Ref: dosen_token_usage.tokenId > dosen_tokens.id [delete: Cascade]

Ref: dosen_token_usage.userId > user.id [delete: Cascade]

Ref: assignments.courseId > courses.id [delete: Cascade]

Ref: assignments.createdById > user.id [delete: Cascade]

Ref: assignment_snapshots.assignmentId > assignments.id [delete: Cascade]

Ref: assignment_submissions.assignmentId > assignments.id [delete: Cascade]

Ref: assignment_submissions.studentId > user.id [delete: Cascade]

Ref: assignment_topics.assignmentId > assignments.id [delete: Cascade]

Ref: assignment_topic_preferences.assignmentTopicId > assignment_topics.id [delete: Cascade]

Ref: assignment_topic_preferences.personId > user.id [delete: Cascade]

Ref: student_competency_profiles.studentId > user.id [delete: Cascade]

Ref: student_competency_profiles.skillId > skills.id [delete: Cascade]

Ref: student_competency_profiles.sourceAssignmentId > assignments.id [delete: Set Null]

Ref: personality_sessions.userId > user.id [delete: Cascade]

Ref: personality_profiles.userId - user.id [delete: Cascade]

Ref: personality_responses.sessionId > personality_sessions.id [delete: Cascade]

Ref: personality_responses.questionId > personality_questions.id [delete: Restrict]

Ref: personality_scores.sessionId - personality_sessions.id [delete: Cascade]